--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
     "http-errors": "~1.6.3",
+    "moment": "^2.24.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.1",
+    "mysql": "^2.17.1",
     "pug": "2.0.0-beta11"
   }
 }
